<resources>
    <string name="app_name">Midburn Gate</string>
    <string name="invitation_number">מספר הזמנה</string>
    <string name="ticket_number">מספר כרטיס:</string>
    <string name="send">שלח</string>
    <string name="manually_validate_dialog_title">חסר זיהוי</string>
    <string name="manually_validate_dialog_message">עליך להכניס את מספר ההזמנה ואת מספר הכרטיס
    </string>
    <string name="ok">OK</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="ticket_owner_name">שם:</string>
    <string name="ticket_type">סוג הכרטיס:</string>
    <string name="entrance_date">תאריך כניסה:</string>
    <string name="exit">הוצא מהאירוע</string>
    <string name="entrance">הכנס לאירוע</string>
    <string name="gate_code">קוד שער:</string>
    <string name="insert_gate_code">הכנס קוד אירוע</string>
    <string name="insert">הכנס</string>
    <string name="validate_gate_code_empty">קוד שער ריק</string>
    <string name="validate_gate_code_mismatch">קוד שער צריך להכיל 6 ספרות בדיוק</string>
    <string name="gate_code_key">gate_code</string>
    <string name="gate">Gate</string>
    <string name="no_network_dialog_title">אין חיבור לאינטרנט</string>
    <string name="no_network_dialog_message">וודא שיש חיבור לאינטרנט ונסה שוב</string>
    <string name="barcode">barcode</string>
    <string name="insert_new_gate_code">הכנס קוד שער חדש</string>
    <string name="first_entrance_date">תאריך כניסה ראשון:</string>
    <string name="last_exit_date">תאריך יציאה אחרון:</string>
    <string name="drawer_open">פתח</string>
    <string name="action_menu">menu</string>
    <string name="ticket_owner_id">תעודת זהות:</string>
    <string name="cancel">ביטול</string>
    <string name="scan_barcode">סרוק ברקוד</string>
    <!--errors-->
    <string name="quota_reached_error_message">מכסה מקסימלית של אנשים באירוע</string>
    <string name="user_outside_event_error_message">ברנר כבר נמצא מחוץ לאירוע</string>
    <string name="gate_code_missing_error_message">קוד אירוע חסר או לא קיים</string>
    <string name="ticket_not_found_error_message">כרטיס לא נמצא</string>
    <string name="bad_search_params_error_message">הפרטים שהזנת חסרים או לא קיימים. בבקשה ספק ברקוד
        או מספר כרטיס והזמנה
    </string>
    <string name="already_inside_error_message">ברנר כבר נמצא בתוך האירוע</string>
    <string name="ticker_not_in_group_error_message">הכרטיס לא קיים בתוך הקבוצה</string>
    <string name="server_error_message">השרת למטה. נסה שוב</string>
    <string name="internal_error_message">שגיאת שרת או שרת למטה</string>
    <string name="allowed_park_disabled">המשתמש רשאי לחנות בחניית נכים</string>
    <string name="insert_manually">או הזן פרטים ידנית:</string>
    <string name="no_early_arrival_message">לא נמצאה הקצאה לכניסה מוקדמת</string>
    <string name="car_counter_button">car counter button</string>
    <string name="early_arrival_production">כניסה מוקדמת הפקה</string>
    <string name="wheel_chaired_logo">wheel chaired logo</string>
    <string name="midburn_splash_screen">Midburn splash screen</string>
</resources>
